# AuTex

./: CMakeLists.txt  README.md  main.cpp  test.txt  test_out.mid
include/lexer/: lexer.h  lexer_defs.h  lexer_utils.h
include/parser/: Grammar.h  LL1.h  Operator.h  Parser.h  SLR.h
lexer/: lexer.cpp  lexer_utils.cpp
parser/: Grammar.cpp  LL1.cpp  Operator.cpp  Parser.cpp  SLR.cpp
test/source/: SLR.gr  opr.gr  test.ax  test.gr  test2.gr
